<!--
  ~ This file is part of GNU Taler
  ~ (C) 2020 Taler Systems S.A.
  ~
  ~ GNU Taler is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3, or (at your option) any later version.
  ~
  ~ GNU Taler is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  ~ A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ GNU Taler; see the file COPYING.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Taler Wallet</string>

    <string name="nav_header_title">GNU Taler</string>
    <string name="nav_header_subtitle">Wallet</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_prompt_withdraw">Withdraw Digital Cash</string>
    <string name="nav_exchange_tos">Exchange\'s Terms of Service</string>
    <string name="nav_error">Error</string>

    <string name="button_back">Go Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_scan_qr_code">Scan Taler QR Code</string>

    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_balance_reload">Reload balances</string>
    <string name="menu_developer_mode">Developer Mode</string>
    <string name="menu_retry_pending_operations">Retry Pending Operations</string>

    <string name="servicedesc">my service</string>
    <string name="aiddescription">my aid</string>

    <string name="balances_title">Balances</string>
    <string name="balances_inbound_amount">+%1s %2s</string>
    <string name="balances_inbound_label">inbound</string>
    <string name="balances_empty_state">There is no digital cash in your wallet.\n\nYou can get test money from the demo bank:\n\nhttps://bank.demo.taler.net</string>

    <string name="history_title">History</string>
    <string name="history_fee_label">Fee:</string>
    <string name="history_show_all">Show All</string>
    <string name="history_reload">Reload History</string>
    <string name="history_empty">The wallet history is empty</string>

    <!-- HistoryEvents -->
    <string name="history_event_exchange_added">Exchange Added</string>
    <string name="history_event_exchange_updated">Exchange Updated</string>
    <string name="history_event_reserve_balance_updated">Reserve Balance Updated</string>
    <string name="history_event_payment_sent">Payment</string>
    <string name="history_event_payment_aborted">Payment Aborted</string>
    <string name="history_event_withdrawn">Withdraw</string>
    <string name="history_event_order_accepted">Purchase Confirmed</string>
    <string name="history_event_order_refused">Purchase Cancelled</string>
    <string name="history_event_tip_accepted">Tip Accepted</string>
    <string name="history_event_tip_declined">Tip Declined</string>
    <string name="history_event_order_redirected">Purchase Redirected</string>
    <string name="history_event_refund">Refund</string>
    <string name="history_event_refreshed">Obtained change</string>
    <string name="history_event_unknown">Unknown Event</string>

    <string name="payment_fee">+%s payment fee</string>
    <string name="payment_button_confirm">Confirm Payment</string>
    <string name="payment_button_abort">Abort</string>
    <string name="payment_label_amount_total">Total Amount:</string>
    <string name="payment_label_order_summary">Order</string>
    <string name="payment_error">Error: %s</string>
    <string name="payment_balance_insufficient">Balance insufficient!</string>
    <string name="payment_show_details">Show Details</string>
    <string name="payment_hide_details">Hide Details</string>
    <string name="payment_successful">Payment was successful</string>
    <string name="payment_back_button">Go Back</string>
    <string name="payment_already_paid">You\'ve already paid for this order.</string>

    <string name="withdraw_accepted">Withdrawal accepted</string>
    <string name="withdraw_success_info">The wire transfer now needs to be confirmed with the bank. Once the wire transfer is complete, the digital cash will automatically show in this wallet.</string>
    <string name="withdraw_do_you_want">Do you want to withdraw</string>
    <string name="withdraw_fees">(minus exchange fees not shown in this prototype)</string>
    <string name="withdraw_exchange">Using the exchange provider</string>
    <string name="withdraw_button_testkudos">Withdraw TESTKUDOS</string>
    <string name="withdraw_button_confirm">Confirm Withdraw</string>
    <string name="withdraw_error_title">Withdrawal Error</string>
    <string name="withdraw_error_message">Withdrawing is currently not possible. Please try again later!</string>

    <string name="pending_operations_title">Pending Operations</string>
    <string name="pending_operations_refuse">Refuse Proposal</string>
    <string name="pending_operations_no_action">(no action)</string>

    <string name="settings_version">Version Information</string>
    <string name="exchange_tos_accept">Accept Terms of Service</string>
    <string name="exchange_tos_button_continue">Continue</string>
    <string name="settings_backups">Backups</string>
    <string name="settings_export_to_file">Export wallet to file</string>
    <string name="settings_import_from_file">Import from file</string>
    <string name="settings_developer">Developer Settings (use with caution!)</string>
    <string name="settings_reset">Reset Wallet (dangerous!)</string>

</resources>
